# syllabus-timetable-extract

./: .gitignore  README.md  main.py  pyproject.toml
data/2022/: department.csv  department_url.csv  numbering.json
extract/: __init__.py  miner.py  unpack.py
